<resources>
    <string name="app_name">Self Led Exposure Therapy</string>
    <string name="welcome_title">Welcome</string>
    <string name="button_take_test">Take the Test</string>
    <string name="button_start_treatment">Continue Treatment</string>
    <string name="treatment_title">Treatment Title</string>
    <string name="timer_activity_instructions">"Brief description of the activity and some more filler text to give a better idea of what it looks like  "</string>
    <string name="startCountdownBtnTxt">Start</string>
    <string name="defaultTimerTxt">00:00</string>
    <string name="countdownTimerStopBtn">Stop</string>
    <string name="countdownTimerStartBtn">Start</string>
    <string name="home_would_you_like_to">Would you like to:</string>
    <string name="title_activity_treatment_description_page">TreatmentDescriptionPage</string>
    <string name="treatment_description">In depth description of the treatment, how long, what to do, advice, etc…. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in</string>
    <string name="begin_treatment_btn">Begin Treatment</string>
    <string name="treatment_completion_page_header">Congratulations!</string>
    <string name="treatment_completion_page_description">Congrats on completing this treatment, here are next steps, advice, etc... Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in</string>
    <string name="back_to_treatments_btn">Back to Treatments</string>
    <string name="motivational_page_title">Why</string>
    <string name="motivational_page_description">Don\'t give up! If you stick with it you will Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in</string>
    <string name="test_info_title">Test Info</string>
    <string name="test_info_description">Sit tight and pay attention to these simple instructions: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in</string>
    <string name="begin_test_btn">Begin Test</string>
    <string name="test_question_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in</string>
    <string name="test_answer_1">Strongly Agree</string>
    <string name="test_answer_2">Slightly Agree</string>
    <string name="test_answer_3">Neither Agree Nor Disagree</string>
    <string name="test_answer_4">Slightly Disagree</string>
    <string name="test_answer_5">Strongly Disagree</string>
    <string name="test_next_question_btn">Next Question</string>
    <string name="test_completed_page_title">All Done!</string>
    <string name="test_completed_page_description">Good job completing the test! Here\'s some lorem ipsum text: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in</string>
    <string name="back_to_home_btn">Back To Home</string>
    <string name="treatment_1_name">Test Treatment 1</string>
    <string name="treatment_1_description">Description for test treatment 1</string>
    <string name="treatment_1_step_1_name">Treatment 1 Step 1</string>
    <string name="treatment_1_step_1_description">The first step for the first treatment</string>
    <string name="treatment_1_step_1_long_instruction">Long set of instructions for treatment description page</string>
    <string name="treatment_1_step_1_short_instruction">Short set of instructions for treatment timer page</string>
    <string name="treatment_1_step_2_name">Treatment 1 Step 2</string>
    <string name="treatment_1_step_2_description">The second step for the first treatment</string>
    <string name="treatment_1_step_2_long_instruction">Long set of instructions for treatment description page</string>
    <string name="treatment_1_step_2_short_instruction">Short set of instructions for treatment timer page</string>
    <string name="treatment_1_step_3_name">Treatment 1 Step 3</string>
    <string name="treatment_1_step_3_description">The third step for the first treatment</string>
    <string name="treatment_1_step_3_long_instruction">Long set of instructions for treatment description page</string>
    <string name="treatment_1_step_3_short_instruction">Short set of instructions for treatment timer page</string>
    <string name="treatment_2_name">Test Treatment 2</string>
    <string name="treatment_2_description">Description for test treatment 2</string>
    <string name="treatment_2_step_1_name">Treatment 2 Step 1</string>
    <string name="treatment_2_step_1_description">The first step for the second treatment</string>
    <string name="treatment_2_step_1_long_instruction">Long set of instructions for treatment description page</string>
    <string name="treatment_2_step_1_short_instruction">Short set of instructions for treatment timer page</string>
    <string name="treatment_2_step_2_name">Treatment 2 Step 2</string>
    <string name="treatment_2_step_2_description">The second step for the second treatment</string>
    <string name="treatment_2_step_2_long_instruction">Long set of instructions for treatment description page</string>
    <string name="treatment_2_step_2_short_instruction">Short set of instructions for treatment timer page</string>
    <string name="treatment_2_step_3_name">Treatment 2 Step 3</string>
    <string name="treatment_2_step_3_description">The third step for the second treatment</string>
    <string name="treatment_2_step_3_long_instruction">Long set of instructions for treatment description page</string>
    <string name="treatment_2_step_3_short_instruction">Short set of instructions for treatment timer page</string>
    <string name="treatment_3_name">Test Treatment 3</string>
    <string name="treatment_3_description">Description for test treatment 3</string>
    <string name="treatment_3_step_1_name">Treatment 3 Step 1</string>
    <string name="treatment_3_step_1_description">The first step for the third treatment</string>
    <string name="treatment_3_step_1_long_instruction">Long set of instructions for treatment description page</string>
    <string name="treatment_3_step_1_short_instruction">Short set of instructions for treatment timer page</string>
    <string name="treatment_3_step_2_name">Treatment 3 Step 2</string>
    <string name="treatment_3_step_2_description">The second step for the third treatment</string>
    <string name="treatment_3_step_2_long_instruction">Long set of instructions for treatment description page</string>
    <string name="treatment_3_step_2_short_instruction">Short set of instructions for treatment timer page</string>
    <string name="treatment_3_step_3_name">Treatment 3 Step 3</string>
    <string name="treatment_3_step_3_description">The third step for the third treatment</string>
    <string name="treatment_3_step_3_long_instruction">Long set of instructions for treatment description page</string>
    <string name="treatment_3_step_3_short_instruction">Short set of instructions for treatment timer page</string>
    <string name="test_question_headline_test">Question Number Something</string>
    <string name="rationale_page_title">Rationale</string>
    <string name="rationale_page_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="rationale_page_btn">Continue</string>
    <string name="continue_btn">Continue</string>
    <string name="purpose_page_title">Purpose of App</string>
    <string name="purpose_page_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="consent_page_title">Consent</string>
    <string name="consent_page_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="agree_btn">I Agree</string>
    <string name="denied_page_title">Not Suitable</string>
    <string name="denied_page_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="longer_rationale_page_title">Longer Rationale</string>
    <string name="longer_rationale_page_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="formulation_page_title">Formulation</string>
    <string name="treatment_rationale_page_title">Treatment Rationale</string>
    <string name="treatment_rationale_page_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>